@@ -16,32 +16,32 @@ Hash: SHA256
 
 SHA1 8146267b09af8157aa67eb220b0b6ad3d5c61303 Build.PL
 SHA1 d0f2060d740ce428f14c47b7f9cc2c65bf66cd7b COPYING
-SHA1 7b19edebe6332fcee4589b133431c7c905336833 Changelog
+SHA1 28b3d50b30acd9de61010ec28b72b6607256c65a Changelog
 SHA1 aab725d3ceafacba619988601b393aa3d20b543c MANIFEST
-SHA1 91feb8ef44658226aa3d7e810a56a7b54b8bfa05 META.yml
+SHA1 eb3dc78a0f0884e289f1f2bb6d691808d6086a38 META.yml
 SHA1 bbff2d44f9fa2c89eb7666e6154eec9e810de913 README
-SHA1 a73438395e61f15c9ef41cfccfa4dd910a05e908 bin/db-ris
-SHA1 e8dfa46ed3db52f6e04e442140666ce2c9d8d7ca lib/Travel/Status/DE/DeutscheBahn.pm
-SHA1 66ac82e17850778b3c110a21baaf8296b59ddaa6 lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 f0aafadc0bee1a357c224ce215e7c60b0a7b0ce2 bin/db-ris
+SHA1 3e3798e064f152636d8ef01717c7a5ed742d7d63 lib/Travel/Status/DE/DeutscheBahn.pm
+SHA1 cd6b9500cb5d6b629f7b482986b1c230c4ad8661 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 SHA1 6cfaebdb4d57688b8ac50f3e840a99a48c15457b t/00-compile-pm.t
 SHA1 3adfc7da6082f15051da7fbda884723388738b61 t/01-compile-pl.t
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
-SHA1 5b34887dacfbe524dfa417c7457886892e3d6600 t/20-db.t
+SHA1 c4670a78a4d7cb9f742740dcddaf4d691150ac3c t/20-db.t
 SHA1 d406786e99f134d2dcf15a220370ca17693c5a93 t/in/essen.html
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOHUv8AAoJEBANW/tRZuAFD/cP/31RLcRIlQO13lukYTMcwNeG
-dhXOdS5D4u0Og3onyX/RJDCD/mXd3XBE4/CldcXTER77HtiFq3LLvd4Ae0+Lazng
-pHnjoSP7LXzFVzeQ2X37plQ5RYMvh29d5RpWZJOdX/ikDcKOd2edPTYNNgnUO2vV
-Sj7U6qc3q2/2yci8R/eM8IgWkD0hFktUyTxnw2qpWHmtmytRYnTG1RFnWuKPoMCj
-ZKkGiuGGHzikxHhw1ybUx0GnNV1k0wf4hmS+AacJ+HaSLqtU8mg9JizLKqliMy2A
-PrPDo/fFcp3vfkUi0rJblY2Wtd6vSX5csDL2N9lSQn8xzn8kY7Q8aig7uj2VBGLS
-cjZmNNmQ6Y6p3e1ZNhF8YzCcY1OeFqJkSVgOdDJNSPKupIjEY8fcdIFI9yZFZu72
-eieTlTmf6xRyRXGZvg/oGAtA7yYwUfWpSyDhdWuwrOhfcAtrM+lDI9nyGCrd3SiV
-nmoy+9en+rNi6vgUsBOwqjfzTKztJJL7Iw9SvVBE6LJ9dx5FgoW/M0uK09/fscLP
-++2eyjlai45z3tx02pEdewSQYHXL49QSRwBXDyT7sEMUpxoOm8dlNi0HRS/YTelI
-OVjIcM0j1FFyb5KhnJONgH5zfCTF7KWrrNMK74LDKm1UV6IQNHmUem3ukFiX11c5
-yZJMzba0pUVh/ZN/hyjs
-=/7Mi
+iQIcBAEBCAAGBQJOHb2zAAoJEBANW/tRZuAFmbAQAM1psviIToMB30mkY9cuSIy6
+/BkNDkysG96w+FiMysZFhXH+o1ayUBk8wHiRml6Wstya9ejv8P8IacnVAFCa1FHY
+EWxOuE0FkHETEJm/6OMAifOrF5BGGy4G9nvT+N/5HOrhyd10vvDHjhxazK9A3y4c
+ZnraHCGKWvPcw0JjPAQTQ95FPTwDkWtfM2NfTKOO22/IgvkHfdP6wV65jnGws7Vl
+e4inO8NPN5DSemfhJPyhYCt1iJw8yScx0E3O6fZKpf8aEx4tpVdb56E53kV21dEr
+TUSQHE+F2dfH9v5k5F3OO2doaVCvPj6Tu8EZSQSasGET8NYaTWhK+uIhznS1Q2Af
+vyZkOKjUKRrU5gKA+pgGDRmmZi+lyaW8WnzKEW4Dj5FuR2HM20Mn5iKwNmpb4+VU
+dRPq7JXNRNO0y6ti9HWlByJEWIk8WkgpLnSxojmtEwLV6PTwOkXclAzXkg0WlOeL
+h9Szadi21mwl50dTpD754I8Vp6GCr1w5iM8gDtULopTzU0WsCzoEcD6TRseryLwB
+iCuHJXCO6ulKJQMk0Ek4g+sv0Cw1q6PJFtsRWU/7+S1ZH/WxuxOIarlcarfuhyaz
+R81qsGp8eAN3oX7uYFkGs5sF5Q0p8FxfGOhPPrK18lvjPAiVx2qkSJ85AM1DmBcH
+ZbPHVdAJbksDIKM8pzYO
+=DG8/
 -----END PGP SIGNATURE-----
