@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.010;
 
-our $VERSION = '0.03';
+our $VERSION = '0.04';
 
 use Getopt::Long qw(:config no_ignore_case);
 use List::Util qw(first max);
@@ -84,57 +84,9 @@ sub display_result {
 	return;
 }
 
-sub filter_info {
-	my ($info) = @_;
-
-	$info =~ s{ (?: ^ | , ) (?: p.nktlich | k [.] A [.] ) }{}x;
-
-	return $info;
-}
-
-sub filter_via {
-	my (@via) = @_;
-
-	my ( @via_main, @via_show, $last_stop );
-
-	for my $stop (@via) {
-		if ( $stop =~ m{ ?Hbf} ) {
-			push( @via_main, $stop );
-		}
-	}
-	$last_stop = pop(@via);
-
-	if ( @via_main and @via and $via[0] eq $via_main[0] ) {
-		shift(@via_main);
-	}
-
-	if ( @via < 3 ) {
-		@via_show = @via;
-	}
-	else {
-		@via_show = splice( @via, 0, ( @via_main > 2 ? 1 : 3 - @via_main ) );
-
-		while ( @via_show < 3 and @via_main ) {
-			my $stop = shift(@via_main);
-			if ( $stop ~~ \@via_show or $stop eq $last_stop ) {
-				next;
-			}
-			push( @via_show, $stop );
-		}
-	}
-
-	for my $stop (@via_show) {
-		$stop =~ s{ ?Hbf}{};
-	}
-
-	return @via_show;
-}
-
 for my $d ( $status->results() ) {
 
-	my ( @via, @via_main, @via_show );
-
-	my $re_late = qr{ (?: ^ | , ) ca[.] \s \d+ \s Minuten \s sp.ter}ox;
+	my @via;
 
 	@via = $d->route;
 
@@ -142,7 +94,7 @@ for my $d ( $status->results() ) {
 		next;
 	}
 
-	if ( $ignore_late and $d->info =~ $re_late ) {
+	if ( $ignore_late and $d->delay ) {
 		next;
 	}
 
@@ -150,8 +102,8 @@ for my $d ( $status->results() ) {
 		@output,
 		[
 			$d->time, $d->train,
-			join( q{  }, filter_via(@via) ), $d->destination,
-			$d->platform, filter_info( $d->info )
+			join( q{  }, $d->route_interesting ), $d->destination,
+			$d->platform, $d->info,
 		]
 	);
 }
@@ -171,7 +123,7 @@ B<db-ris> [B<-d> I<date>] [B<-L>] [B<-m> I<motlist>] [B<-t> I<time>]
 
 =head1 VERSION
 
-version 0.03
+version 0.04
 
 =head1 DESCRIPTION
 
