@@ -6,10 +6,10 @@ use 5.010;
 
 use parent 'Class::Accessor';
 
-our $VERSION = '0.03';
+our $VERSION = '0.04';
 
 Travel::Status::DE::DeutscheBahn::Result->mk_ro_accessors(
-	qw(time train route_end route_raw platform info));
+	qw(time train route_end route_raw platform info_raw));
 
 sub new {
 	my ( $obj, %conf ) = @_;
@@ -25,6 +25,34 @@ sub destination {
 	return $self->{route_end};
 }
 
+sub info {
+	my ($self) = @_;
+
+	my $info = $self->info_raw;
+
+	$info =~ s{ ,Grund }{}ox;
+	$info =~ s{ ^ \s+ }{}ox;
+	$info =~ s{ (?: ^ | , ) (?: p.nktlich | k [.] A [.] ) }{}ox;
+	$info =~ s{ ^ , }{}ox;
+
+	return $info;
+}
+
+sub delay {
+	my ($self) = @_;
+
+	my $info = $self->info_raw;
+
+	if ( $info =~ m{ p.nktlich }ox ) {
+		return 0;
+	}
+	if ( $info =~ m{ ca[.] \s (?<delay> \d+ ) \s Minuten \s sp.ter }ox ) {
+		return $+{delay};
+	}
+
+	return;
+}
+
 sub origin {
 	my ($self) = @_;
 
@@ -35,6 +63,56 @@ sub route {
 	my ($self) = @_;
 
 	return @{ $self->{route} };
+}
+
+sub route_interesting {
+	my ( $self, $max_parts ) = @_;
+
+	my @via = $self->route;
+	my ( @via_main, @via_show, $last_stop );
+	$max_parts //= 3;
+
+	for my $stop (@via) {
+		if ( $stop =~ m{ ?Hbf}o ) {
+			push( @via_main, $stop );
+		}
+	}
+	$last_stop = pop(@via);
+
+	if ( @via_main and $via_main[-1] eq $last_stop ) {
+		pop(@via_main);
+	}
+
+	if ( @via_main and @via and $via[0] eq $via_main[0] ) {
+		shift(@via_main);
+	}
+
+	if ( @via < $max_parts ) {
+		@via_show = @via;
+	}
+	else {
+		if ( @via_main >= $max_parts ) {
+			@via_show = ( $via[0] );
+		}
+		else {
+			@via_show = splice( @via, 0, $max_parts - @via_main );
+		}
+
+		while ( @via_show < $max_parts and @via_main ) {
+			my $stop = shift(@via_main);
+			if ( $stop ~~ \@via_show or $stop eq $last_stop ) {
+				next;
+			}
+			push( @via_show, $stop );
+		}
+	}
+
+	for (@via_show) {
+		s{ ?Hbf}{};
+	}
+
+	return @via_show;
+
 }
 
 1;
@@ -71,7 +149,7 @@ arrival/departure received by Travel::Status::DE::DeutscheBahn
 
 =head1 VERSION
 
-version 0.03
+version 0.04
 
 =head1 DESCRIPTION
 
@@ -97,10 +175,14 @@ either the train's destination or its origin station.
 
 Convenience aliases for $result->route_end.
 
+=item $result->delay
+
+Returns the train's delay in minutes, or undef if it is unknown.
+
 =item $result->info
 
-Returns additional information, usually wether the train is on time or
-delayed.
+Returns additional information, for instance the reason why the train is
+delayed. May be an empty string if no (useful) information is available.
 
 =item $result->platform
 
@@ -111,6 +193,22 @@ arrive.
 
 Returns a list of station names the train will pass between the selected
 station and its origin/destination.
+
+=item $result->route_interesting([I<max>])
+
+Returns a list of up to I<max> (default: 3) interesting stations the train
+will pass on its journey. Since deciding whether a station is interesting or
+not is somewhat tricky, this feature should be considered experimental.
+
+The first element of the list is always the train's next stop. The following
+elements contain as many main stations as possible, but there may also be
+smaller stations if not enough main stations are available.
+
+In future versions, other factors may be taken into account as well.  For
+example, right now airport stations are usually not included in this list,
+although they should be.
+
+Note that all main stations will be stripped of their "Hbf" suffix.
 
 =item $result->route_raw
 
@@ -155,7 +253,7 @@ Required I<data>:
 
 =item B<platform> => I<string>
 
-=item B<info> => I<string>
+=item B<info_raw> => I<string>
 
 =back
 
@@ -175,7 +273,7 @@ None.
 
 =head1 BUGS AND LIMITATIONS
 
-Unknown.
+Arrival times are present in B<route_raw>, but not accessible via B<route>.
 
 =head1 SEE ALSO
 
