@@ -1,3 +1,11 @@
+Travel::Status::DE::DeutscheBahn 0.04 - Wed Jul 13 2011
+
+    [Travel::Status::DE::DeutscheBahn::Result]
+    * The info accessor now strips the mostly useless "k.A." / "pünktlich"
+      (train on time) text parts
+    * Add (slightly experimental) route_interesting accessor
+    * Add delay accessor
+
 Travel::Status::DE::DeutscheBahn 0.03 - Wed Jul 13 2011
 
     * Clarify derl dependency (we actually need >= 5.10.1)
